syntax = "proto3";

package envoy.type;

option java_outer_classname = "FormatProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.type";

import "google/protobuf/struct.proto";

// [#protodoc-title: Format]

// Allows to define custom format of returned data.
message StringOrJson {

  oneof format {
    // Plain text format. Allows to specify some custom message to returns.
    //
    // .. code-block:: yaml
    //
    //   string_format: "My custom message"
    //
    string string_format = 1;

    // Json format as dictionary. Allows to specify some custom message to return in json format.
    //
    // .. code-block:: yaml
    //
    //  json_format:
    //    protocol: "HTTP/1.1"
    //    message: "My message"
    //
    // The following JSON object would be returned:
    //
    // .. code-block:: json
    //
    //  {
    //    "protocol": "HTTP/1.1",
    //    "message": "My message"
    //  }
    //
    google.protobuf.Struct json_format = 2;
  }
}
